First commited as before_67580_rev1